k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
spec:
  selector:
    matchLabels:
      app: flask-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
      - name: flask-api
        image: registry.digitalocean.com/wiham/flask-api-dev:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flask-backend-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: flask-backend
  ports:
  - protocol: TCP
    name: http
    targetPort: 5000
    port: 80
