k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flask-backend-cluster-ip
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-frontend-cluster-ip
                port:
                  number: 80
